<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="67dp"
        android:layout_height="71dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="9dp"
        android:contentDescription="@string/strContentDesc"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        android:src="@drawable/bluelock_logo" />

    <TextView
        android:id="@+id/tvBrand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ivLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:text="@string/strBluelock"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btnShutdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignStart="@+id/btnLogout"
        android:onClick="clickShutdown"
        android:text="@string/strShutdown" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnShutdown"
        android:layout_alignParentLeft="true"
        android:layout_alignStart="@+id/btnLogout"
        android:onClick="clickLogin"
        android:text="@string/strLogin" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnLogin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="clickLogout"
        android:text="@string/strLogout" />

    <Button
        android:id="@+id/btnconnect"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignStart="@+id/tvBrand"
        android:layout_below="@+id/ivLogo"
        android:layout_marginTop="84dp"
        android:onClick="clickConnect"
        android:text="@string/strConnect" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnLogout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:text="Commands:"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>